add Google+ link

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="stylesheets/ie.css">
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <a href="https://plus.google.com/112719899034359702406" rel="publisher">Find FREG on Google+</a>
 
   </head>
   <body>
