Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <link rel="stylesheet" href="stylesheets/ie.css">
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <a href="https://plus.google.com/112719899034359702406" rel="publisher">Find FREG on Google+</a>
 
   </head>
   <body>
@@ -56,7 +55,8 @@ g++  -lncurses -pthread main.cpp</p>
 
 <p>Screenshots of early versions are available <a href="https://picasaweb.google.com/mmaulwurff/Eyecube?authuser=0&amp;feat=directlink">here</a>.</p>
 
-<p>Some description is available <a href="http://my.opera.com/mmaulwurff/search/?search=FREG">here</a> [russian].</p>
+<p>Some description is available <a href="http://my.opera.com/mmaulwurff/search/?search=FREG">here</a> [russian].
+Also there is a <a href="https://plus.google.com/112719899034359702406">Google+ page</a>.</p>
 
 <p>Advices are welcome.</p>
 
