compile way changed

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Inspired by Minecraft and Angband.</p>
 Non-standard libraries: ncurses, pthreads</p>
 
 <p>Compile:
-g++  -lncurses -pthread main.cpp</p>
+g++ -lncurses -pthread main.cpp world.cpp blocks.cpp screen.cpp -o FREG.bin</p>
 
 <p>Development is run on GNU/Linux, but on MS Windows should work too with <a href="http://pdcurses.sourceforge.net/">PDCurses</a> and <a href="http://sources.redhat.com/pthreads-win32/">Pthreads-w32</a>.</p>
 
