--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ g++ -lncurses -pthread main.cpp world.cpp blocks.cpp screen.cpp -o FREG.bin</p>
 
 <p>Now only singleplayer is developed, multiplayer is planned.</p>
 
-<p>Screenshots of early versions are available <a href="https://picasaweb.google.com/mmaulwurff/Eyecube?authuser=0&amp;feat=directlink">here</a>.</p>
+<p>Screenshots of early versions are available <a href="https://plus.google.com/photos/100232486142402747012/albums/5669532744165795441?banner=pwa&gpsrc=pwrd1">here</a>.</p>
 
 <p>Some description is available <a href="http://my.opera.com/mmaulwurff/search/?search=FREG">here</a> [russian].
 Also there is a <a href="https://plus.google.com/112719899034359702406">Google+ page</a>.</p>
