--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@ g++ -lncurses -pthread main.cpp world.cpp blocks.cpp screen.cpp -o FREG.bin</p>
 
 <p>Development is run on GNU/Linux, but on MS Windows should work too with <a href="http://pdcurses.sourceforge.net/">PDCurses</a> and <a href="http://sources.redhat.com/pthreads-win32/">Pthreads-w32</a>.</p>
 
+<p><a href="freg-nox/html/index.html">Documentation</a></p>
+
 <p>Now only singleplayer is developed, multiplayer is planned.</p>
 
 <p>Screenshots of early versions are available <a href="https://plus.google.com/photos/100232486142402747012/albums/5669532744165795441?banner=pwa&gpsrc=pwrd1">here</a>.</p>
