--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@ This is a version of FREG with text graphics.</p>
 Documentation: <a href="http://mmaulwurff.github.io/FREG/html/index.html">http://mmaulwurff.github.io/FREG/html/index.html</a>
 </p>
 
+<p><a href="https://plus.google.com/112719899034359702406" rel="publisher">Google+</a></p>
+
 <p>Language: C++11, Qt (version &gt;= 5.2)</p>
 
 <p>Non-standard libraries: libncurses5</p>
